# tml

./: .gitignore  Cargo.toml  README.md  config_example.toml
.github/workflows/: publish.yml
crates/tml_application/: Cargo.toml
crates/tml_application/src/: app_trait.rs  lib.rs
crates/tml_application/src/app_trait/: file_scanner.rs  job_handler.rs  jwt_manager.rs  music_info_provider.rs  password_hasher.rs  search_engine.rs  tx_context.rs
crates/tml_application/src/console_usecase/: init_admin.rs  reset_password.rs
crates/tml_application/src/usecase/: app.rs  mgmt.rs
crates/tml_application/src/usecase/app/: add_music_info_to_music_list.rs  change_music_info_order_in_music_list.rs  create_music_list.rs  delete_music_list.rs  get_music_info_file_path.rs  read_all_music_info_from_music_list.rs  remove_music_info_from_music_list.rs  search_music_info.rs  update_music_list.rs
crates/tml_application/src/usecase/auth/: login.rs  read_user_info.rs  register.rs  update_user.rs
crates/tml_application/src/usecase/mgmt/: create_job.rs  create_normal_user.rs  create_storage.rs  delete_job.rs  delete_storage.rs  read_all_job.rs  read_all_storage.rs  update_normal_user.rs  update_storage.rs
crates/tml_domain/: Cargo.toml
crates/tml_domain/src/: lib.rs  model.rs
crates/tml_domain/src/model/: app.rs
crates/tml_domain/src/model/app/: music_list.rs
crates/tml_domain/src/model/auth/: user.rs
crates/tml_domain/src/model/mgmt/: job.rs  storage.rs
crates/tml_infrastructure/: Cargo.toml
crates/tml_infrastructure/src/: entity.rs  job_handler.rs  jwt_manager.rs  lib.rs  music_info_provider.rs  password_hasher.rs  search_engine.rs  tx_context.rs  usecase.rs
crates/tml_infrastructure/src/console_usecase/: init_admin.rs  reset_password.rs
crates/tml_infrastructure/src/entity/: app.rs  mgmt.rs
crates/tml_infrastructure/src/entity/app/: album.rs  album_artist.rs  album_performer.rs  artist.rs  music_info.rs  music_info_artist.rs  music_info_music_list.rs  music_info_performer.rs  music_list.rs  performer.rs
crates/tml_infrastructure/src/entity/auth/: role.rs  user.rs  user_role.rs
crates/tml_infrastructure/src/entity/mgmt/: job.rs  storage.rs
crates/tml_infrastructure/src/usecase/: app.rs  auth.rs  mgmt.rs
crates/tml_infrastructure/src/usecase/app/: add_music_info_to_music_list.rs  change_music_info_order_in_music_list.rs  create_music_list.rs  delete_music_list.rs  get_music_info_file_path.rs  remove_music_info_from_music_list.rs  update_music_list.rs
crates/tml_infrastructure/src/usecase/auth/: login.rs  register.rs  update_user.rs
crates/tml_infrastructure/src/usecase/mgmt/: create_job.rs  create_storage.rs  delete_storage.rs  read_all_job.rs  read_all_normal_user.rs  read_all_storage.rs  update_normal_user.rs  update_storage.rs
crates/tml_migration/src/: lib.rs  m20260529_000001_create_table.rs  main.rs
crates/tml_webapi/: Cargo.toml
crates/tml_webapi/src/: app_state.rs  command.rs  config.rs  endpoint.rs  extractor.rs  logger.rs  main.rs  manage.rs  meilisearch.rs
crates/tml_webapi/src/endpoint/: app.rs  login.rs  mgmt.rs  register.rs
crates/tml_webapi/src/endpoint/app/: add_music_info_to_music_list.rs  change_music_info_order_in_music_list.rs  create_music_list.rs  delete_music_list.rs  read_all_music_info_from_music_list.rs  read_all_music_list.rs  remove_music_info_from_music_list.rs  search_music_info.rs  update_music_list.rs
crates/tml_webapi/src/endpoint/auth/: login.rs  read_user_info.rs  register.rs  update_user.rs
crates/tml_webapi/src/endpoint/mgmt/: create_job.rs  create_normal_user.rs  create_storage.rs  delete_job.rs  delete_normal_user.rs  delete_storage.rs  read_all_job.rs  read_all_normal_user.rs  read_all_storage.rs  read_job.rs  update_normal_user.rs  update_storage.rs
tml/: Cargo.toml  config_example.toml
tml-ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
tml-ui/src/: App.svelte  app.css
tml-ui/src/lib/: api.ts
tml-ui/src/pages/home/: Home.svelte  Login.svelte  UserProfile.svelte  userProfileType.ts
tml-ui/src/pages/jobs/: Jobs.svelte
tml-ui/src/pages/storages/: Storages.svelte
tml-ui/src/pages/users/: Users.svelte
tml/crates/tml_application/: Cargo.toml
tml/crates/tml_application/src/: console_usecase.rs  lib.rs
tml/crates/tml_application/src/app_trait/: job_handler.rs  jwt_manager.rs  music_info_provider.rs  password_hasher.rs  tx_context.rs
tml/crates/tml_application/src/console_usecase/: init_admin.rs
tml/crates/tml_application/src/usecase/: auth.rs
tml/crates/tml_application/src/usecase/app/: delete_music_list.rs  get_music_info_file_path.rs  read_all_music_list.rs  remove_music_info_from_music_list.rs  update_music_list.rs
tml/crates/tml_infrastructure/: Cargo.toml
tml/crates/tml_infrastructure/src/: job_handler.rs  jwt_manager.rs  lib.rs  music_info_provider.rs
tml/crates/tml_infrastructure/src/console_usecase/: reset_password.rs
tml/crates/tml_infrastructure/src/entity/: auth.rs
tml/crates/tml_infrastructure/src/usecase/: app.rs
tml/crates/tml_migration/: Cargo.toml
tml/crates/tml_migration/src/: m20260529_000001_create_table.rs
tml/crates/tml_webapi/: .gitignore  Cargo.toml
tml/crates/tml_webapi/src/: app_state.rs  config.rs  endpoint.rs  extractor.rs  main.rs  manage.rs  meilisearch.rs
tml/crates/tml_webapi/src/endpoint/: static_file.rs
tml/crates/tml_webapi/src/endpoint/app/: add_music_info_to_music_list.rs  change_music_info_order_in_music_list.rs  create_music_list.rs  delete_music_list.rs  get_music_stream.rs  read_all_music_info_from_music_list.rs  read_all_music_list.rs  remove_music_info_from_music_list.rs  search_music_info.rs  update_music_list.rs
tml/crates/tml_webapi/src/endpoint/auth/: login.rs  read_user_info.rs  register.rs  update_user.rs
tml/crates/tml_webapi/src/endpoint/mgmt/: create_job.rs  create_normal_user.rs  create_storage.rs  delete_job.rs  delete_normal_user.rs  delete_storage.rs  read_all_job.rs  read_all_normal_user.rs  read_all_storage.rs  read_job.rs  update_normal_user.rs  update_storage.rs
(+30 files in other folders)
