[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/tml_webapi"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tml_migration = { path = "crates/tml_migration" }
tml_domain = { path = "crates/tml_domain" }
tml_application = { path = "crates/tml_application" }
tml_infrastructure = { path = "crates/tml_infrastructure" }

async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = [
    "rust_crypto",
] }
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
thiserror = "2.0.18"
config = "0.15.23"
chrono = "0.4.44"
