[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/tml_webapi"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tml_migration = { path = "crates/tml_migration" }
tml_domain = { path = "crates/tml_domain" }
tml_application = { path = "crates/tml_application" }
tml_infrastructure = { path = "crates/tml_infrastructure" }

async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = [
    "rust_crypto",
] }
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
thiserror = "2.0.18"
config = "0.15.23"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
inquire = "0.9.4"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "time",
] }
uuid = { version = "1.23.2", features = ["v4"] }
moka = { version = "0.12.15", features = ["future"] }
lofty = "0.24.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
fractional_index = "2.0.2"
hex = "0.4.3"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
axum-range = "1.0.0"
percent-encoding = "2.3.2"
meilisearch-sdk = { version = "0.33.0", default-features = false, features = [
    "reqwest",
    "jwt_rust_crypto",
] }
reqwest = "0.13.4"
