[package]
name = "tml_infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
tml_domain = { workspace = true }
tml_application = { workspace = true }

sea-orm = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
lofty = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { workspace = true }
