[package]
name = "tml_webapi"
version.workspace = true
edition.workspace = true

[dependencies]
tml_domain = { workspace = true }
tml_application = { workspace = true }
tml_infrastructure = { workspace = true }
tml_migration = { workspace = true }

sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.47", features = ["formatting", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time"] }
