[package]
name = "tml_webapi"
version.workspace = true
edition.workspace = true

[dependencies]
tml_domain = { workspace = true }
tml_application = { workspace = true }
tml_infrastructure = { workspace = true }
tml_migration = { workspace = true }

sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
moka = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
