[package]
publish = false
name = "tml_migration"
edition.workspace = true
version.workspace = true

[lib]
name = "tml_migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }

[dependencies.sea-orm-migration]
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
version = "2.0.0-rc.42"
